--- a/web1/src/app/inventory/inventory-summary/inventory-summary.component.html
+++ b/web1/src/app/inventory/inventory-summary/inventory-summary.component.html
@@ -217,7 +217,7 @@
                                                             [ngModelOptions]="{standalone: true}" name="s{{i}}">
                                                             <option [value]='0'>None</option>
                                                             <option [value]='1'>Brand</option>
-                                                            <option [value]='2'>Non-Barnd</option>
+                                                            <option [value]='2'>Non-Brand</option>
                                                         </select>
                                                     </td>
                                                     <td [ngClass]="{'my_class': s.BrandType === '1'}">{{s.PurchaseDate}}</td>
