--- a/web1/src/app/common/login.component.css
+++ b/web1/src/app/common/login.component.css
@@ -230,7 +230,7 @@ h4:hover {
 
 .box input[type="text"]:focus,
 .box input[type="password"]:focus {
-  min-width: 350px;
+  /* width: 250px; */
   border-color: rgb(255, 81, 0);
 }
 
@@ -894,19 +894,37 @@ html {
 }
 
 
-@media only screen and (max-width: 700px) and (min-width: 375px) {
+@media only screen and (max-width: 700px) and (min-width: 300px) {
+
+
+  .box {
+    max-width: 500px;
+    padding: 20px;
+    top: 50%;
+    left: 50%;
+    background: rgb(25, 19, 80);
+    text-align: center;
+    transition: 0.25s;
+    margin-top: 10px;
+    border-radius: 20px;
+}
+
+  .tagline{
+    font-size: 12px;
+  }
+
   .key {
     cursor: pointer;
     float: right;
     position: absolute;
-    top: 47%;
+    top: 46%;
     COLOR: #FFF;
-    LEFT: 30%;
+    LEFT: 84%;
   }
 
   .box input[type="text"]:focus,
   .box input[type="password"]:focus {
-    min-width: 200px !important;
+    /* min-width: 200px !important; */
     border-color: rgb(255, 81, 0);
   }
   .cat {
@@ -921,6 +939,18 @@ html {
   .log_name {
     font-size: 30px !important;
   }
+
+  .social-circle li a{
+    display: inline-block;
+    position: relative;
+    margin: 0 auto 0 auto;
+    border-radius: 50%;
+    text-align: center;
+    min-width: 30px;
+    min-height: 50px;
+    font-size: 20px;
+}
+
 }
 
 @media only screen and (max-width: 1300px) and (min-width: 700px) {
