--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -149,7 +149,7 @@
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-5 col-lg-8 col-md-6 col-12 mb-0 mb-4 mb-md-0 ms-auto">
-                                            <button class="me-2" mat-raised-button color="primary"
+                                            <button *ngIf="id != 0" class="me-2" mat-raised-button color="primary"
                                                 style="padding: 0px 10px;"
                                                 [routerLink]="['/sale/billinglist/',data.ID]">Bill History</button>
 
