--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -14,7 +14,7 @@
 <body>
     <% if(data.length !==0){ data.forEach(function (i, index) { %>
         <% if (data.CompanyBarcode == 5){%>
-            <table style="margin-left: -10px; margin-top: -9px; background-color: aqua;">
+            <table style="margin-left: -10px; margin-top: -9px; ">
                 <tr>
                     <th  style="width: 140px; padding: 0;">
                         <div
