--- a/web1/src/app/sale/commission-detail/commission-detail.component.html
+++ b/web1/src/app/sale/commission-detail/commission-detail.component.html
@@ -99,6 +99,8 @@
                                                     <th>NonBrandedCommissionAmount</th>
                                                     <th>Quantity</th>
                                                     <th>BillAmount</th>
+                                                     <th>Shop Name</th>
+
                                                 </tr>
                                             </thead>
                                             <tbody class="text-center">
@@ -112,6 +114,9 @@
                                                     <td>{{item.NonBrandedCommissionAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                     <td>{{item.Quantity}}</td>
                                                     <td>{{item.BillAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
+                                                    <td>{{item.ShopName}}<span [style.color]="'blue'"
+                                                        *ngIf="item.AreaName != 'null'">({{item.AreaName}})</span>
+                                                    </td>
                                                 </tr>
                                             </tbody>
                                         </table>
