--- a/web1/src/app/sale/doctor/doctor.component.html
+++ b/web1/src/app/sale/doctor/doctor.component.html
@@ -163,7 +163,7 @@
                                                     [(ngModel)]="data.CommissionValueNB" #CommissionValueNBcontrol required>
                                             </mat-form-field>
                                         </div>
-                                        <div class="col-xl-3 col-lg-3 col-md-3 col-6 mb-0">
+                                        <!-- <div class="col-xl-3 col-lg-3 col-md-3 col-6 mb-0">
                                             <mat-checkbox labelPosition="before" color="primary" name="LoginPermission"
                                                 [(ngModel)]="data.LoginPermission">Login Permission</mat-checkbox>
                                         </div>
@@ -183,7 +183,7 @@
                                                     autocomplete="new-password" />
                                                 <mat-error>Password is required</mat-error>
                                             </mat-form-field>
-                                        </div>
+                                        </div> -->
                                     </div>
                                     <div class="col-xl-12 col-lg-12 col-md-12 col-12 mb-3">
                                         <button class="me-3" type="button" mat-raised-button color="primary"
