--- a/web1/src/app/report/expense/expense.component.html
+++ b/web1/src/app/report/expense/expense.component.html
@@ -43,6 +43,7 @@
                                         <mat-form-field class="example-full-width mb-0">
                                           <mat-label>Payment Mode</mat-label>
                                           <mat-select name="PayMode" [(ngModel)]="data.PaymentMode" required #GSTTypecontrol1>
+                                            <mat-option value="All">All</mat-option>
                                             <mat-option [value]="p.Name" *ngFor="let p of PaymentModesList"> {{p.Name}} </mat-option>
                                           </mat-select>
                                         </mat-form-field>
@@ -73,24 +74,58 @@
                             </form>
                             <!--  list -->
                             <div class="body p-2">
-                                <div class="col-sm-12" style="overflow: auto; height: 450px;">
+                                <div id="ExpensePDF" class="col-sm-12" style="overflow: auto; height: 450px;">
                                     <table class="table table-striped table-hover table-sm table-bordered"
-                                        style="border: 2px solid #fff !important;" id="ProductTransferExcel">
+                                        style="border: 2px solid #fff !important;" id="ExpenseExcel">
                                         <thead>
                                             <tr style="white-space: nowrap;">
                                                 <th>S.No</th>
-                                                <th>Customer Name</th>
-                                                <th>MobileNo</th>
-                                                <th>Family</th>
-                                                <th>RefferedByDoctor</th>
+                                                <th>ExpenseDate</th>
+                                                <th>InvoiceNo</th>
+                                                <th>ExpenseType</th>
+                                                <th>GivenTo</th>
+                                                <th>PaymentMode</th>
+                                                <th>CashType</th>
+                                                <th>Amount</th>
                                                 <th>ShopName</th>
-                                                <th>EmployeeName</th>
-                                                <th>EyeTestingDate</th>
-                                                <th>FollowUpDate</th>
+                                            </tr>
+                                            <tr class="totolRow" >
+                                                <td>
+                                                    <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
+                                                        aria-hidden="true" type="button" (click)="exportAsXLSX()"> </i>
+                                                        <button class="bg_none ms-4"
+                                                        printTitle="sale Report {{this.shopLists}}"
+                                                        printSectionId="ExpensePDF" ngxPrint
+                                                        styleSheetFile="../../../assets/pdf.css">
+                                                        <i class="far fa-file-pdf "
+                                                            style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                    </button>
+
+                                                   
+                                                </td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
                                             </tr>
                                         </thead>
                                         <tbody class="text-center">
-                                           
+                                            <tr *ngFor="let data of ExpenseList; let i = index" text="left">
+                                                <td>{{ i + 1 }}</td>
+                                                <td>{{dateFormat(data.ExpenseDate)}}</td>
+                                                <td>{{data.InvoiceNo}}</td>
+                                                <td>{{data.Category}}</td>
+                                                <td>{{data.Name}}</td>
+                                                <td>{{data.PaymentMode}}</td>
+                                                <td>{{data.CashType}}</td>
+                                                <td>{{data.Amount}}</td>
+                                                <td>{{data.ShopName}}<span [style.color]="'blue'"
+                                                        *ngIf="data.AreaName !== 'null'">({{data.AreaName}})</span></td>
+                                            </tr>
                                         </tbody>
                                     </table>
                                 </div>
