--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -318,7 +318,7 @@
                         </mat-error>
                     </mat-form-field>
                 </div>
-                <div class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0" *ngIf="this.PurchasePriceInput">
+                <div class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0" *ngIf="this.PurchasePriceInput || BillItem.Manual === true">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>PurchasePrice</mat-label>
                         <input matInput type="number" min="0" name="PurchasePrice" [(ngModel)]="BillItem.PurchasePrice" required
