--- a/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.html
+++ b/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.html
@@ -55,7 +55,7 @@
                             <th>SupplierName</th>
                             <th>SystemDb No.</th>
                             <th>SupplierCn No.</th>
-                            <th>PurchaseDate</th>
+                            <th>ReturnDate</th>
                             <th>Quantity</th>
                             <th>Discount</th>
                             <th>Subtotal</th>
