--- a/web1/src/app/inventory/supplier/supplier.component.html
+++ b/web1/src/app/inventory/supplier/supplier.component.html
@@ -32,6 +32,9 @@
                                     [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                                 </ngb-pagination>
                             </div>
+                            <div class=" col-md-1 col-5 ms-auto order-0 order-md-1">
+                                <button type="button" (click)="openModal1(content1)" class="me-3" mat-raised-button color="primary">Create Credit Note</button>
+                            </div>
                             <div class=" col-md-2 col-5 ms-auto order-0 order-md-1">
                                 <div class="input-group">
                                     <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search"
@@ -315,3 +318,79 @@
     </div>
 </ng-template>
 <!-- model popup ent -->
+
+<ng-template #content1 role="document" let-modal>
+    <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
+        <h2 class="modal-title header pt-2" id="exampleModalLabel">Supplier Credit Note </h2>
+        <button type="button" title="Close Botton" class="btn-close" aria-hidden="true"
+            (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+        <form #fn="ngForm" autocomplete="off" (ngSubmit)="creditNoteSave();">
+           <div class="row">
+            <div class="col-xl-4 col-lg-3 col-md-4 col-6 mb-0 d-inline-flex">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Supplier Name</mat-label>
+                    <mat-select name="Supplier" editable="true"
+                        [(ngModel)]="note.SupplierID" required #singleSelect>
+                        <mat-option>
+                            <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                            </ngx-mat-select-search>
+                        </mat-option>
+                        <mat-option [value]="sup.ID"
+                            *ngFor="let sup of supplierDropList | proditemfilter: searchValue  let i = index;">
+                            {{sup.Name}}
+                        </mat-option>
+                    </mat-select>
+                    <mat-error>
+                        Select Supplier
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-4  col-lg-3 col-md-6 col-sm-12 mb-0 ">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Shop Name</mat-label>
+                    <mat-select name="ShopID" [(ngModel)]="note.ShopID" required [disabled]="user.UserGroup !== 'CompanyAdmin'">
+                        <mat-option [value]="sup.ID" *ngFor="let sup of dropShoplist" style="color: #000;">
+                            {{sup.Name}}
+                            <span [style.color]="'blue'" *ngIf="sup.AreaName !== 'null'">({{sup.AreaName}})</span>
+                        </mat-option>
+                    </mat-select>
+                    <mat-error> Select Shop</mat-error>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Credit Number</mat-label>
+                    <input matInput name="CreditNumber" type="text" [(ngModel)]="note.CreditNumber"
+                    required  #MobileNo2control>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Credit Date</mat-label>
+                    <input matInput name="CreditDate" type="date" [(ngModel)]="note.CreditDate"
+                    required  #MobileNo2control>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Amount</mat-label>
+                    <input matInput name="Amount" type="number" min="0" [(ngModel)]="note.Amount"
+                    required #MobileNo2control>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-6 col-lg-3 col-md-6 col-6 mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Remark</mat-label>
+                    <textarea matInput name="Remark" type="text" [(ngModel)]="note.Remark"
+                        #MobileNo2control></textarea>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
+                <button type="submit" class="me-3" mat-raised-button color="primary" [disabled]="!fn.valid" >Save</button>
+            </div>
+           </div>
+        </form>
+    </div>
+</ng-template>
