--- a/web1/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web1/src/app/inventory/purchase-return/purchase-return.component.html
@@ -32,7 +32,7 @@
                                   <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                       <mat-label>Shop Name</mat-label>
-                                      <mat-select name="shopID" [(ngModel)]="selectedPurchaseMaster.ShopID" required >
+                                      <mat-select name="ShopID" [(ngModel)]="selectedPurchaseMaster.ShopID" required >
                                         <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}}
                                           <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
                                         </mat-option>
